--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<body background="botnoise.png">
-<center>
-<div style="width: 500px; background-color: black; color: white; font-size: 24pt; position:absolute; top: 35%;">
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>poek.es</title>
+<link rel="stylesheet" href="screen.css" type="text/css" media="screen" charset="utf-8">
+</head>
+<body class="home">
+<div id="content">
 THE FUTURE IS NOW THE FUTURE IS POEK.ES
 </div>
-</center>
 </body>
+</html>
